objects/Subsidiary_Vendor__c/Subsidiary_Vendor__c.object-meta.xml
<CustomObject>
    <label>Subsidiary Vendor</label>
    <nameField>
        <label>No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidiary Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>