objects/Subsidiary_Vendor__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <label>Billing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryList</valueSetName>
    </valueSet>
</CustomField>