objects/Subsidiary_Vendor__c/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>