objects/Subsidiary_Vendor__c/fields/New_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Name__c</fullName>
    <label>New Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>