objects/Subsidiary_Vendor__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>30</length>
    <type>Text</type>
</CustomField>