objects/Subsidiary_Vendor__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>Subsidiary Vendors</relationshipLabel>
    <relationshipName>Subsidiary_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>