objects/Subsidiary_Vendor__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Center__c.Subsidiary_Company__c</field>
            <operation>equals</operation>
            <valueField>$Source.Subsidiary_Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Subsidiary Vendors</relationshipLabel>
    <relationshipName>Subsidiary_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>