objects/Subsidiary_Vendor__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipName>Account_and_Vendor_Links</relationshipName>
    <type>Lookup</type>
</CustomField>