objects/Subsidiary_Vendor__c/fields/xName__c.field-meta.xml
<CustomField>
    <fullName>xName__c</fullName>
    <label>xName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>